--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,14 @@ chardet==4.0.0
 charset-normalizer==3.3.2
 click==8.0.1
 cryptography==41.0.7
+dnspython==2.5.0
+email-validator==2.1.0.post1
 Flask==2.0.1
 Flask-Admin==1.5.8
 Flask-Login==0.6.3
 Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.2.1
 greenlet==1.1.0
 idna==2.10
 itsdangerous==2.0.1
@@ -31,7 +34,7 @@ python-decouple==3.8
 python-dotenv==1.0.0
 pytz==2023.3.post1
 requests==2.25.1
-scikit-learn==1.4.0
+scikit-learn==1.1.2
 scipy==1.9.2
 sentencepiece==0.1.97
 six==1.16.0
