--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+Babel==2.14.0
 beautifulsoup4==4.9.3
 blinker==1.7.0
 bs4==0.0.1
@@ -10,15 +11,16 @@ cryptography==41.0.7
 dnspython==2.5.0
 email-validator==2.1.0.post1
 Flask==2.0.1
-Flask-Admin==1.5.8
+Flask-Admin==1.6.1
+flask-babel==4.0.0
 Flask-Login==0.6.3
 Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.2.1
-greenlet==1.1.0
+greenlet==1.1.3
 idna==2.10
 itsdangerous==2.0.1
-Jinja2==3.0.1
+Jinja2>=3.1
 joblib==1.2.0
 jusText==2.2.0
 langdetect==1.0.9
