Updated init files for Babel

--- a/.env-template
+++ b/.env-template
@@ -1,5 +1,6 @@
 #Language setting
 export PEARS_LANG=<language code>
+export TRANSLATION_DIR=<the full path to your translation directory>
 
 # Mail Settings
 export MAIL_DEFAULT_SENDER=<your email>
