--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+alembic==1.13.1
+astroid==3.0.3
 Babel==2.14.0
 beautifulsoup4==4.9.3
 blinker==1.7.0
@@ -8,6 +10,7 @@ chardet==4.0.0
 charset-normalizer==3.3.2
 click==8.0.1
 cryptography==41.0.7
+dill==0.3.8
 dnspython==2.5.0
 email-validator==2.1.0.post1
 Flask==2.0.1
@@ -15,22 +18,30 @@ Flask-Admin==1.6.1
 flask-babel==4.0.0
 Flask-Login==0.6.3
 Flask-Mail==0.9.1
+Flask-Migrate==4.0.5
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.2.1
 greenlet==1.1.3
 idna==2.10
+importlib_metadata==7.0.2
+importlib_resources==6.1.3
+isort==5.13.2
 itsdangerous==2.0.1
-Jinja2>=3.1
+Jinja2==3.1.3
 joblib==1.2.0
 jusText==2.2.0
 langdetect==1.0.9
 lxml==4.9.1
+Mako==1.3.2
 MarkupSafe==2.1.1
+mccabe==0.7.0
 numpy==1.23.3
 pandas==2.0.3
 pdfminer.six==20221105
 Pillow==9.3.0
+platformdirs==4.2.0
 pycparser==2.21
+pylint==3.0.3
 python-dateutil==2.8.2
 python-decouple==3.8
 python-dotenv==1.0.0
@@ -44,7 +55,11 @@ sklearn==0.0
 soupsieve==2.2.1
 SQLAlchemy==1.4.17
 threadpoolctl==3.1.0
+tomli==2.0.1
+tomlkit==0.12.3
+typing_extensions==4.9.0
 tzdata==2023.3
 urllib3==1.26.5
 Werkzeug==2.0.1
 WTForms==2.3.3
+zipp==3.17.0
