Updated the .env template

--- a/.env-template
+++ b/.env-template
@@ -1,5 +1,5 @@
 #Language setting
-export PEARS_LANG=<language code>
+export PEARS_LANGS=<language codes, separate by commas>
 export TRANSLATION_DIR=<the full path to your translation directory>
 
 # Mail Settings
