Modified the .env template

--- a/.env-template
+++ b/.env-template
@@ -15,3 +15,6 @@ export SECURITY_PASSWORD_SALT=<some other long string>
 
 # PYTHONANYWHERE SETTING
 export PA_USERNAME=<your username>
+
+# About you
+export SITENAME=<the name of your site>
