--- a/.env-template
+++ b/.env-template
@@ -18,3 +18,4 @@ export PA_USERNAME=<your username>
 
 # About you
 export SITENAME=<the name of your site>
+export SITE_TOPIC=<a brief description of the focus of your instance, to appear in the FAQ page>
