Added custom placeholder on search bar

--- a/.env-template
+++ b/.env-template
@@ -19,3 +19,4 @@ export PA_USERNAME=<your username>
 # About you
 export SITENAME=<the name of your site>
 export SITE_TOPIC=<a brief description of the focus of your instance, to appear in the FAQ page>
+export SEARCH_PLACEHOLDER=<a placeholder with some examples of what people can search for, will appear in main search bar>
