--- a/.env-template
+++ b/.env-template
@@ -17,6 +17,7 @@ export SECURITY_PASSWORD_SALT=<some other long string>
 export PA_USERNAME=<your username>
 
 # About you
+export OWN_BRAND=false
 export SITENAME=<the name of your site>
 export SITE_TOPIC=<a brief description of the focus of your instance, to appear in the FAQ page>
 export SEARCH_PLACEHOLDER=<a placeholder with some examples of what people can search for, will appear in main search bar>
