--- a/.env-template
+++ b/.env-template
@@ -21,3 +21,10 @@ export OWN_BRAND=false
 export SITENAME=<the name of your site>
 export SITE_TOPIC=<a brief description of the focus of your instance, to appear in the FAQ page>
 export SEARCH_PLACEHOLDER=<a placeholder with some examples of what people can search for, will appear in main search bar>
+
+# Legal
+export ORG_NAME=<your organisation's name>
+export ORG_ADDRESS=<your organisation's address, on one line>
+export ORG_EMAIL=<your organisation's email (could be the same as above)>
+export APPLICABLE_LAW=<your jurisdiction (usually, your location)>
+export EU_SPECIFIC=true
