Add environment variable for port
Completes https://github.com/PeARSearch/PeARS-federated/issues/27

--- a/.env-template
+++ b/.env-template
@@ -16,6 +16,9 @@ export SECURITY_PASSWORD_SALT=<some other long string>
 # PYTHONANYWHERE SETTING
 export PA_USERNAME=<your username>
 
+# Server
+export APP_PORT=8080
+
 # About you
 export OWN_BRAND=false
 export SITENAME=<the name of your site>
