Some cleaning up

--- a/.env-template
+++ b/.env-template
@@ -13,6 +13,9 @@ export EMAIL_PASSWORD=<your password>
 export SECRET_KEY=<some long string>
 export SECURITY_PASSWORD_SALT=<some other long string>
 
+# Pod settings
+#export PODS_DIR=<the full path to your pod directory>
+
 # PYTHONANYWHERE SETTING
 export PA_USERNAME=<your username>
 
