--- a/.env-template
+++ b/.env-template
@@ -34,3 +34,7 @@ export ORG_ADDRESS=<your organisation's address, on one line>
 export ORG_EMAIL=<your organisation's email (could be the same as above)>
 export APPLICABLE_LAW=<your jurisdiction (usually, your location)>
 export EU_SPECIFIC=true
+
+# Snippet length is fixed at 10 words to respect EU legal framework
+# Do not change this unless you know what you are doing!
+export SNIPPET_LENGTH=10
