Disable flask debug mode by default, unless FLASK_ENV=development

--- a/.env-template
+++ b/.env-template
@@ -21,6 +21,7 @@ export PA_USERNAME=<your username>
 
 # Server
 export APP_PORT=8080
+export FLASK_ENV=development # Set this to "production", when running flask in production.
 
 # About you
 export OWN_BRAND=false
