Added env variable to disable new users.

--- a/.env-template
+++ b/.env-template
@@ -35,6 +35,12 @@ export ORG_EMAIL=<your organisation's email (could be the same as above)>
 export APPLICABLE_LAW=<your jurisdiction (usually, your location)>
 export EU_SPECIFIC=true
 
+# User-relatd settings
+export NEW_USERS_ALLOWED=<allow users to create accounts>
+
 # Snippet length is fixed at 10 words to respect EU legal framework
 # Do not change this unless you know what you are doing!
 export SNIPPET_LENGTH=10
+
+# Optimization
+export MAX_PODS=<max number of pods to consider in results>
