Revised version of the privacy page, GDPR-compliant.

--- a/.env-template
+++ b/.env-template
@@ -34,6 +34,7 @@ export ORG_ADDRESS=<your organisation's address, on one line>
 export ORG_EMAIL=<your organisation's email (could be the same as above)>
 export APPLICABLE_LAW=<your jurisdiction (usually, your location)>
 export EU_SPECIFIC=true
+export SERVERS=<the organisation providing the servers on which the instance is hosted>
 
 # User-relatd settings
 export NEW_USERS_ALLOWED=<allow users to create accounts>
