--- a/.env-template
+++ b/.env-template
@@ -47,3 +47,4 @@ export SNIPPET_LENGTH=10
 # Optimization
 export MAX_PODS=<max number of pods to consider in results>
 export LIVE_PODSUM=true
+export LOADED_POS_INDEX=0
