--- a/.env-template
+++ b/.env-template
@@ -46,5 +46,5 @@ export SNIPPET_LENGTH=10
 
 # Optimization
 export MAX_PODS=<max number of pods to consider in results>
-export LIVE_PODSUM=true
+export LIVE_MATRIX=true
 export LOADED_POS_INDEX=0
