Added env variable to control query expansion.

--- a/.env-template
+++ b/.env-template
@@ -46,5 +46,4 @@ export SNIPPET_LENGTH=10
 
 # Optimization
 export LIVE_MATRIX=true
-export MAX_PODS=<max number of pods to consider in results>
-export LOADED_POS_INDEX=0
+export EXTEND_QUERY=false
