Made feedback form optional via env variable.

--- a/.env-template
+++ b/.env-template
@@ -39,6 +39,7 @@ export SERVERS=<the organisation providing the servers on which the instance is 
 
 # User-relatd settings
 export NEW_USERS_ALLOWED=<allow users to create accounts>
+export FEEDBACK_FORM=false
 
 # Snippet length is fixed at 10 words to respect EU legal framework
 # Do not change this unless you know what you are doing!
