--- a/.env-template
+++ b/.env-template
@@ -25,6 +25,7 @@ export FLASK_ENV=development # Set this to "production", when running flask in p
 
 # About you
 export OWN_BRAND=false
+export LOGO_PATH=<the path to your own brand logos (default: static folder)>
 export SITENAME=<the name of your site>
 export SITE_TOPIC=<a brief description of the focus of your instance, to appear in the FAQ page>
 export SEARCH_PLACEHOLDER=<a placeholder with some examples of what people can search for, will appear in main search bar>
