--- a/.env-template
+++ b/.env-template
@@ -24,8 +24,8 @@ export APP_PORT=8080
 export FLASK_ENV=development # Set this to "production", when running flask in production.
 
 # About you
+#export LOGO_PATH=<the path to your own brand logos (default: static folder)>
 export OWN_BRAND=false
-export LOGO_PATH=<the path to your own brand logos (default: static folder)>
 export SITENAME=<the name of your site>
 export SITE_TOPIC=<a brief description of the focus of your instance, to appear in the FAQ page>
 export SEARCH_PLACEHOLDER=<a placeholder with some examples of what people can search for, will appear in main search bar>
