Set session cookie to secure

--- a/.env-template
+++ b/.env-template
@@ -12,6 +12,7 @@ export EMAIL_PASSWORD=<your password>
 # Secrets
 export SECRET_KEY=<some long string>
 export SECURITY_PASSWORD_SALT=<some other long string>
+export CSRF_SESSION_KEY=<yet another long string>
 
 # Pod settings
 #export PODS_DIR=<the full path to your pod directory>
