Updated legal pages

--- a/.env-template
+++ b/.env-template
@@ -35,10 +35,13 @@ export ORG_NAME=<your organisation's name>
 export ORG_ADDRESS=<your organisation's address, on one line>
 export ORG_EMAIL=<your organisation's email (could be the same as above)>
 export APPLICABLE_LAW=<your jurisdiction (usually, your location)>
-export EU_SPECIFIC=true
+export TAX_OFFICE=<if applicable>
+export REGISTRATION_NUMBER=<for organisations or companies, if applicable>
+export VAT_NUMBER=<if applicable>
+export EU_SPECIFIC=<true if server is located in the EU, false otherwise>
 export SERVERS=<the organisation providing the servers on which the instance is hosted>
 
-# User-relatd settings
+# User-related settings
 export NEW_USERS_ALLOWED=<allow users to create accounts>
 export FEEDBACK_FORM=false
 
