Modified captcha code to work with docker

--- a/.env-template
+++ b/.env-template
@@ -14,11 +14,12 @@ export SECRET_KEY=<some long string>
 export SECURITY_PASSWORD_SALT=<some other long string>
 export CSRF_SESSION_KEY=<yet another long string>
 
-# Pod settings
+# Docker settings
 #export PODS_DIR=<the full path to your pod directory>
+#export CAPTCHA_DIR=<the full path to your captcha directory>
 
 # PYTHONANYWHERE SETTING
-export PA_USERNAME=<your username>
+#export PA_USERNAME=<your username>
 
 # Server
 export APP_PORT=8080
