--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -17,8 +17,9 @@ ENV SQLALCHEMY_DATABASE_URI="sqlite:////var/lib/pears/data/app.db"
 ENV LOGO_PATH="/var/lib/pears/data"
 ENV PODS_DIR="/var/lib/pears/data/pods"
 ENV SUGGESTIONS_DIR="/var/lib/pears/data/userdata"
+ENV CAPTCHA_DIR="/var/lib/pears/data/.captchas"
 
-RUN mkdir -p /var/lib/pears/data/pod /var/lib/pears/data/userdata
+RUN mkdir -p /var/lib/pears/data/pod /var/lib/pears/data/userdata /var/lib/pears/data/.captchas
 
 COPY . /app
 
