Very basic version of mastodon bot that listens for mentions with "pearsbot-suggest" and then enters any URLs found in the toot that the message replies to as suggestions in the database

--- a/.env-template
+++ b/.env-template
@@ -53,3 +53,7 @@ export SNIPPET_LENGTH=10
 # Optimization
 export LIVE_MATRIX=true
 export EXTEND_QUERY=false
+
+# Mastodon (only fill out if you want to use a mastodon suggestion bot, otherwise just leave empty)
+export MASTODON_API_TOKEN=<mastodon api token>
+export MASTODON_USERNAME=<username @user@domain of your mastodon bot>
