--- a/.env-template
+++ b/.env-template
@@ -27,7 +27,7 @@ export FLASK_ENV=development # Set this to "production", when running flask in p
 
 # About you
 export OWN_BRAND=false
-export SITENAME=<the name of your site>
+export SITENAME=<the domain of your site, e.g. "https://my-first-pears-instance.org". During local testing you might want to set it to "localhost:8080">
 export SITE_TOPIC=<a brief description of the focus of your instance, to appear in the FAQ page>
 export SEARCH_PLACEHOLDER=<a placeholder with some examples of what people can search for, will appear in main search bar>
 
