Basic functionality for tooting every time a new page is indexed

--- a/.env-template
+++ b/.env-template
@@ -58,3 +58,4 @@ export EXTEND_QUERY=false
 export MASTODON_API_TOKEN=<mastodon api token>
 export MASTODON_USERNAME=<username @user@domain of your mastodon bot>
 export MASTODON_INSTANCE=<URL of your bot's mastodon instance, e.g. https://fosstodon.org/>
+export MASTODON_TOOT_ABOUT_NEW_INDEXED_PAGES=<true if you have a mastodon bot and you want it to toot every time a new page is indexed, else false>
