Minor fixes to install process.

--- a/.env-template
+++ b/.env-template
@@ -1,6 +1,6 @@
 #Language setting
 export PEARS_LANGS=<language codes, separate by commas>
-export TRANSLATION_DIR=<the full path to your translation directory>
+export TRANSLATION_DIR=translations
 
 # Mail Settings
 export MAIL_DEFAULT_SENDER=<your email>
