Basic email notification on suggestion submission

--- a/.env-template
+++ b/.env-template
@@ -8,6 +8,7 @@ export EMAIL_USER=<the same email address as previously>
 export MAIL_SERVER=<your mail server>
 export MAIL_PORT=<the mail port of your mail server>
 export EMAIL_PASSWORD=<your password>
+export SEND_EMAIL_ON_SUGGESTION=<if set to 'true', a notification will be sent to MAIL_DEFAULT_SENDER every time a new page is suggested for indexing>
 
 # Secrets
 export SECRET_KEY=<some long string>
