Introduce single-pod indexing mode

--- a/.env-template
+++ b/.env-template
@@ -1,3 +1,9 @@
+# ---- for PeARS-for-book-research ----
+# Instance-specific behaviour
+export SINGLE_POD_INDEXING=<true/false: if set to true, don\'t use the normal pod system but index all pages into a single pod. Cannot be changed after the instance is populated.> 
+export SINGLE_POD_NAME=<name of the single pod. if not set, defaults to "global">
+# ----
+
 #Language setting
 export PEARS_LANGS=<language codes, separate by commas>
 export TRANSLATION_DIR=translations
