--- a/requirements.txt
+++ b/requirements.txt
@@ -1,64 +1,64 @@
-alembic==1.13.1
-astroid==3.1.0
-Babel==2.14.0
-beautifulsoup4==4.12.3
-blinker==1.7.0
-bs4==0.0.2
-certifi==2024.2.2
-cffi==1.16.0
-chardet==5.2.0
-charset-normalizer==3.3.2
-click==8.1.7
-cryptography==42.0.5
-dill==0.3.8
-dnspython==2.6.1
-email_validator==2.1.1
-Flask==3.0.2
-Flask-Admin==1.6.1
-flask-babel==4.0.0
-Flask-Login==0.6.3
-Flask-Mail==0.9.1
-Flask-Migrate==4.0.7
-Flask-SQLAlchemy==3.1.1
-Flask-WTF==1.2.1
-greenlet==3.0.3
-idna==3.6
-importlib_metadata==7.1.0
-importlib_resources==6.4.0
-isort==5.13.2
-itsdangerous==2.1.2
-Jinja2==3.1.3
-joblib==1.3.2
-jusText==3.0.0
-langdetect==1.0.9
-lxml==5.1.0
-Mako==1.3.2
-MarkupSafe==2.1.5
-mccabe==0.7.0
-numpy==1.24.4
-pandas==2.0.3
-pdfminer.six==20231228
-platformdirs==4.2.0
-pycparser==2.21
-pylint==3.1.0
-python-dateutil==2.9.0.post0
-python-decouple==3.8
-python-dotenv==1.0.1
-pytz==2024.1
-requests==2.31.0
-scikit-learn==1.3.2
-scipy==1.10.1
-sentencepiece==0.2.0
-six==1.16.0
-soupsieve==2.5
-SQLAlchemy==2.0.28
-threadpoolctl==3.4.0
-tomli==2.0.1
-tomlkit==0.12.4
-typing_extensions==4.10.0
-tzdata==2024.1
-urllib3==2.2.1
-Werkzeug==3.0.1
-WTForms==3.1.2
-zipp==3.18.1
-captcha==0.6.0
+alembic>=1.13.1
+astroid>=3.1.0
+Babel>=2.14.0
+beautifulsoup4>=4.12.3
+blinker>=1.7.0
+bs4>=0.0.2
+certifi>=2024.2.2
+cffi>=1.16.0
+chardet>=5.2.0
+charset-normalizer>=3.3.2
+click>=8.1.7
+cryptography>=42.0.5
+dill>=0.3.8
+dnspython>=2.6.1
+email_validator>=2.1.1
+Flask>=3.0.2
+Flask-Admin>=1.6.1
+flask-babel>=4.0.0
+Flask-Login>=0.6.3
+Flask-Mail>=0.9.1
+Flask-Migrate>=4.0.7
+Flask-SQLAlchemy>=3.1.1
+Flask-WTF>=1.2.1
+greenlet>=3.0.3
+idna>=3.6
+importlib_metadata>=7.1.0
+importlib_resources>=6.4.0
+isort>=5.13.2
+itsdangerous>=2.1.2
+Jinja2>=3.1.3
+joblib>=1.3.2
+jusText>=3.0.0
+langdetect>=1.0.9
+lxml>=5.1.0
+Mako>=1.3.2
+MarkupSafe>=2.1.5
+mccabe>=0.7.0
+numpy>=1.24.4
+pandas>=2.0.3
+pdfminer.six>=20231228
+platformdirs>=4.2.0
+pycparser>=2.21
+pylint>=3.1.0
+python-dateutil>=2.9.0.post0
+python-decouple>=3.8
+python-dotenv>=1.0.1
+pytz>=2024.1
+requests>=2.31.0
+scikit-learn>=1.3.2
+scipy>=1.10.1
+sentencepiece>=0.2.0
+six>=1.16.0
+soupsieve>=2.5
+SQLAlchemy>=2.0.28
+threadpoolctl>=3.4.0
+tomli>=2.0.1
+tomlkit>=0.12.4
+typing_extensions>=4.10.0
+tzdata>=2024.1
+urllib3>=2.2.1
+Werkzeug>=3.0.1
+WTForms>=3.1.2
+zipp>=3.18.1
+captcha>=0.6.0
