First working version of per-page max snippet length

--- a/.env-template
+++ b/.env-template
@@ -50,6 +50,10 @@ export FEEDBACK_FORM=false
 # Do not change this unless you know what you are doing!
 export SNIPPET_LENGTH=10
 
+# For websites without copyright restrictions, licensed under CC, or for which we have specific permission to use longer snippets:
+# how long should the longer snippets be by default (if no specific other limit is set for the URL)
+export LONG_SNIPPET_LENGTH=50
+
 # Optimization
 export LIVE_MATRIX=true
 export EXTEND_QUERY=false
